// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IfStatement 1`] = `
{
  "@": {
    "end": {
      "column": 26,
      "line": 1,
      "offset": 25,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "block": {
    "@": {
      "end": {
        "column": 26,
        "line": 1,
        "offset": 25,
      },
      "start": {
        "column": 8,
        "line": 1,
        "offset": 7,
      },
    },
    "kind": "Block",
    "statements": [
      {
        "@": {
          "end": {
            "column": 25,
            "line": 1,
            "offset": 24,
          },
          "start": {
            "column": 10,
            "line": 1,
            "offset": 9,
          },
        },
        "expression": {
          "@": {
            "end": {
              "column": 25,
              "line": 1,
              "offset": 24,
            },
            "start": {
              "column": 17,
              "line": 1,
              "offset": 16,
            },
          },
          "kind": "StringLiteral",
          "value": "hello",
        },
        "kind": "ReturnStatement",
      },
    ],
  },
  "elseCase": null,
  "guard": {
    "@": {
      "end": {
        "column": 6,
        "line": 1,
        "offset": 5,
      },
      "start": {
        "column": 5,
        "line": 1,
        "offset": 4,
      },
    },
    "kind": "NumberLiteral",
    "value": 3,
  },
  "kind": "IfStatement",
}
`;

exports[`IfStatement.else 1`] = `
{
  "@": {
    "end": {
      "column": 6,
      "line": 5,
      "offset": 69,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "block": {
    "@": {
      "end": {
        "column": 6,
        "line": 3,
        "offset": 35,
      },
      "start": {
        "column": 8,
        "line": 1,
        "offset": 7,
      },
    },
    "kind": "Block",
    "statements": [
      {
        "@": {
          "end": {
            "column": 5,
            "line": 3,
            "offset": 34,
          },
          "start": {
            "column": 7,
            "line": 2,
            "offset": 15,
          },
        },
        "expression": {
          "@": {
            "end": {
              "column": 5,
              "line": 3,
              "offset": 34,
            },
            "start": {
              "column": 14,
              "line": 2,
              "offset": 22,
            },
          },
          "kind": "StringLiteral",
          "value": "hello",
        },
        "kind": "ReturnStatement",
      },
    ],
  },
  "elseCase": {
    "@": {
      "end": {
        "column": 6,
        "line": 5,
        "offset": 69,
      },
      "start": {
        "column": 12,
        "line": 3,
        "offset": 41,
      },
    },
    "kind": "Block",
    "statements": [
      {
        "@": {
          "end": {
            "column": 5,
            "line": 5,
            "offset": 68,
          },
          "start": {
            "column": 7,
            "line": 4,
            "offset": 49,
          },
        },
        "expression": {
          "@": {
            "end": {
              "column": 5,
              "line": 5,
              "offset": 68,
            },
            "start": {
              "column": 14,
              "line": 4,
              "offset": 56,
            },
          },
          "kind": "StringLiteral",
          "value": "world",
        },
        "kind": "ReturnStatement",
      },
    ],
  },
  "guard": {
    "@": {
      "end": {
        "column": 6,
        "line": 1,
        "offset": 5,
      },
      "start": {
        "column": 5,
        "line": 1,
        "offset": 4,
      },
    },
    "kind": "NumberLiteral",
    "value": 3,
  },
  "kind": "IfStatement",
}
`;

exports[`IfStatement.elseif 1`] = `
{
  "@": {
    "end": {
      "column": 6,
      "line": 7,
      "offset": 106,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "block": {
    "@": {
      "end": {
        "column": 6,
        "line": 3,
        "offset": 35,
      },
      "start": {
        "column": 8,
        "line": 1,
        "offset": 7,
      },
    },
    "kind": "Block",
    "statements": [
      {
        "@": {
          "end": {
            "column": 5,
            "line": 3,
            "offset": 34,
          },
          "start": {
            "column": 7,
            "line": 2,
            "offset": 15,
          },
        },
        "expression": {
          "@": {
            "end": {
              "column": 5,
              "line": 3,
              "offset": 34,
            },
            "start": {
              "column": 14,
              "line": 2,
              "offset": 22,
            },
          },
          "kind": "StringLiteral",
          "value": "three",
        },
        "kind": "ReturnStatement",
      },
    ],
  },
  "elseCase": {
    "@": {
      "end": {
        "column": 6,
        "line": 7,
        "offset": 106,
      },
      "start": {
        "column": 12,
        "line": 3,
        "offset": 41,
      },
    },
    "block": {
      "@": {
        "end": {
          "column": 6,
          "line": 5,
          "offset": 74,
        },
        "start": {
          "column": 19,
          "line": 3,
          "offset": 48,
        },
      },
      "kind": "Block",
      "statements": [
        {
          "@": {
            "end": {
              "column": 5,
              "line": 5,
              "offset": 73,
            },
            "start": {
              "column": 7,
              "line": 4,
              "offset": 56,
            },
          },
          "expression": {
            "@": {
              "end": {
                "column": 5,
                "line": 5,
                "offset": 73,
              },
              "start": {
                "column": 14,
                "line": 4,
                "offset": 63,
              },
            },
            "kind": "StringLiteral",
            "value": "two",
          },
          "kind": "ReturnStatement",
        },
      ],
    },
    "elseCase": {
      "@": {
        "end": {
          "column": 6,
          "line": 7,
          "offset": 106,
        },
        "start": {
          "column": 12,
          "line": 5,
          "offset": 80,
        },
      },
      "kind": "Block",
      "statements": [
        {
          "@": {
            "end": {
              "column": 5,
              "line": 7,
              "offset": 105,
            },
            "start": {
              "column": 7,
              "line": 6,
              "offset": 88,
            },
          },
          "expression": {
            "@": {
              "end": {
                "column": 5,
                "line": 7,
                "offset": 105,
              },
              "start": {
                "column": 14,
                "line": 6,
                "offset": 95,
              },
            },
            "kind": "StringLiteral",
            "value": "one",
          },
          "kind": "ReturnStatement",
        },
      ],
    },
    "guard": {
      "@": {
        "end": {
          "column": 17,
          "line": 3,
          "offset": 46,
        },
        "start": {
          "column": 16,
          "line": 3,
          "offset": 45,
        },
      },
      "kind": "NumberLiteral",
      "value": 2,
    },
    "kind": "IfStatement",
  },
  "guard": {
    "@": {
      "end": {
        "column": 6,
        "line": 1,
        "offset": 5,
      },
      "start": {
        "column": 5,
        "line": 1,
        "offset": 4,
      },
    },
    "kind": "NumberLiteral",
    "value": 3,
  },
  "kind": "IfStatement",
}
`;
